# ar-star

./: .gitmodules  README.md
ar_star_ros/: CMakeLists.txt  COPYRIGHT.txt  README.md  package.xml
ar_star_ros/include/ar_star_ros/: highlight_utils.hpp  lasso_utils.hpp  polygon_utils.hpp
ar_star_ros/launch/: ar_star_server.launch  highlight_mode.launch  lasso_mode.launch  robofleet_client.launch
ar_star_ros/params/: highlight_mode.yaml  lasso_mode.yaml
ar_star_ros/src/: highlight_listener.cpp  highlight_solver.cpp  lasso_listener.cpp  lasso_mode.cpp  lasso_solver.cpp  points_in_lasso_solver.cpp
ar_star_ros/srv/: GetPointsInHighlight.srv  GetPointsInLasso.srv
config/: ar_star_rf_client_config.yaml  build_rf_pkgs.sh  pub_robot.yaml  rf_pkgs.txt  robot_rf_client.yaml  server_rf_client.yaml  sub_hololens.yaml
data/hri_2024_lbr/: README.md
data/hri_2024_lbr/dev_data/: 2023-11-28-15-42-28.bag  2023-11-28-15-55-51.bag  2023-11-28-17-50-15.bag  2023-11-28-17-52-04.bag  2023-11-28-17-58-19.bag  2023-11-30-13-36-37.bag  2023-11-30-13-43-20.bag  v1_highlight_mode.bag  v3_polygon_lasso.bag  v4_polygon_lasso.bag  v5_polygon_lasso.bag  v7_polygon_lasso.bag
data/hri_2024_lbr/post_sus/: sus_results.csv
data/hri_2024_lbr/post_tlx/: nasa_tlx_analysis.ipynb  nasa_tlx_results.csv
data/iros_2023/: augre_1688756362.404215.bag  augre_1688766613.405114.bag  augre_1690561989.037455.bag  augre_1690564685.738775.bag  augre_1690565343.857072.bag  augre_1690565485.234421.bag  augre_1691031377.821703.bag  augre_1691031479.583301.bag  augre_1691032258.395931.bag  augre_detection_1691031479.583301.bag  augre_detection_1691032306.710262.bag  augre_detection_1691099830.343601.bag
data/iros_2023/dev_bags/: augre_1689367697.336233.bag  augre_1690562125.756594.bag  augre_1690564461.153229.bag  augre_1690564836.972000.bag  augre_1690565103.516114.bag  augre_1690565146.735805.bag  augre_1690565287.263141.bag  augre_1691031464.223441.bag  augre_1691032148.778132.bag  augre_1691032176.662779.bag  augre_1691032306.710262.bag  augre_1691099830.343601.bag  augre_detection_1691031377.821703.bag  augre_detection_1691031464.223441.bag  augre_detection_1691032148.778132.bag  augre_detection_1691032176.662779.bag  augre_detection_1691032258.395931.bag  augre_detection_1698446445.138525.bag
data/tahri_2023/dev_data/: 2023-11-28-15-31-05.bag  2023-11-28-16-05-51.bag  2023-11-30-12-50-14.bag  2023-11-30-12-54-49.bag  2023-11-30-13-47-48.bag  2023-11-30-13-52-01.bag  2023-11-30-14-10-15.bag  2023-11-30-14-15-49.bag  2023-11-30-14-24-05.bag  2023-11-30-14-51-34.bag.active  2023-11-30-v1-highlight-mode.bag  2023-11-30-v2-highlight-mode.bag  2023-30-17-v1-lasso-mode-dense.bag  v1_polygon_lasso.bag  v2_highlight_mode.bag  v2_polygon_lasso.bag  v6_polygon_lasso.bag  v8_many_polygon_lasso.bag  v9_many_polygon_lasso.bag
data/tahri_2023/post_sus/: sus_analysis.ipynb
data/tahri_2023/post_tlx/: nasa_tlx_analysis.ipynb
docs/: README.md  _config.yml
test/pcl_tester/: CMakeLists.txt  ear_clipping.cpp  greedy_projection.cpp  pcl_tester_viz.m  test_ear_clipping.cpp
